Fix spacing

--- a/inner_air/dev/scss/components/_header_nav.scss
+++ b/inner_air/dev/scss/components/_header_nav.scss
@@ -24,6 +24,6 @@ header {
     }
 
     & + * {
-        margin-top: 6.5rem;
+        margin-top: 3rem;
     }
 }
